--- a/app/views/questionnaires/edit.html.erb
+++ b/app/views/questionnaires/edit.html.erb
@@ -22,12 +22,61 @@
         <div class="container relative">            
          
             <div class="row">                
-                <%= render 'form' %>
+                <table class="table">
+                  <thead>
+                    <tr>
+                        <%=form_for @questionnaire do |f|%>
+                            <th colspan="3">
+                                <%= f.text_field :job_id, :style => "display: none;", :value => @questionnaire.job_id %>
+                                <%= f.text_field :question , :class => "input-md round form-control", :value => @questionnaire.question %>
+                            </th>
+                            <th>
+                                <%= f.submit "Update", :class => "submit_btn btn btn-mod btn-medium btn-round"%>
+                            </th>
+                        <%end%>
+                    </tr>
+                  </thead>
+                  <tbody style="margin-left: 20px;">
+                    <%@questionnaire.questionnaire_options.each do |questionnaire_option| %>
+                        <tr>
+                            <%=form_for questionnaire_option do |f|%>
+                                <td>
+                                    <%= f.text_field :questionnaire_id, :style => "display: none;", :value => @questionnaire.id %>
+                                </td>
+                                <td>
+                                    <%= f.text_field :option , :class => "input-md round form-control", :value => questionnaire_option.option %>
+                                </td>
+                                <td>
+                                    <%= f.check_box :isRight, :checked => questionnaire_option.isRight %> Correct Answer?
+                                </th>
+                                <td>
+                                    <%= f.submit "Update", :class => "submit_btn btn btn-mod btn-medium btn-round"%>
+                                    <%= link_to 'Delete', questionnaire_option, method: :delete, data: { confirm: 'Are you sure?' }, style: "margin-left: 20px; text-decoration: none;" %>
+                                </td>
+                            <%end%>
+                        </tr>
+                    <% end %>
+                    <tr>
+                        <%=form_for QuestionnaireOption.new do |f|%>
+                            <td>
+                                <%= f.text_field :questionnaire_id, :style => "display: none;", :value => @questionnaire.id %>
+                            </td>
+                            <td>
+                                <%= f.text_field :option , :class => "input-md round form-control", :placeholder => "New option" %>
+                            </td>
+                            <td>
+                                <%= f.check_box :isRight, :checked => false %> Correct Answer?
+                            </th>
+                            <td>
+                                <%= f.submit "Save", :class => "submit_btn btn btn-mod btn-medium btn-round"%>
+                            </td>
+                        <%end%>
+                    </tr>
+                  
+                  </tbody>
+                </table>
             </div>       
         </div>
     </section>
     <!-- End Section -->
 </div>
-
-<%= link_to 'Show', @questionnaire %> |
-<%= link_to 'Back', questionnaires_path %>
