--- a/app/views/questionnaires/index.html.erb
+++ b/app/views/questionnaires/index.html.erb
@@ -24,26 +24,44 @@
             <div class="row"> 
               <p id="notice"><%= notice %></p>
               <table class="table">
-                <thead>
+                <!-- <thead>
                   <tr>
                     <th colspan="2">Question</th>
                     <th colspan="3"></th>
                   </tr>
-                </thead>
+                </thead> -->
 
                 <tbody>
+                  <tr>
+                    <%=form_for Questionnaire.new do |f|%>
+                        <th colspan="3">
+                            <%= f.text_field :job_id, :style => "display: none;", :value => params["job_id"] %>
+                            <%= f.text_field :question , :class => "input-md round form-control", :placeholder => "New Question" %>
+                        </th>
+                        <th>
+                            <%= f.submit "Save", :class => "submit_btn btn btn-mod btn-medium btn-round"%>
+                        </th>
+                    <%end%>
+                  </tr>
                   <% @questionnaires.each do |questionnaire| %>
-                    <tr>
-                      <td colspan="2"><%= questionnaire.question %></td>
-                      <td><%= link_to 'Edit', edit_questionnaire_path(questionnaire) %></td>
-                      <td><%= link_to 'Destroy', questionnaire, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                    </tr>
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th width="80%"><%= questionnaire.question %></th>
+                          <th><%= link_to 'Edit', edit_questionnaire_path(questionnaire) %></th>
+                          <th><%= link_to 'Delete', questionnaire, method: :delete, data: { confirm: 'Are you sure?' } %></th>
+                        </tr>
+                      </thead>
+                      <tbody style="margin-left: 20px;">
                       <% questionnaire.questionnaire_options.each do |questionnaire_option| %>
                         <tr>
                           <td><%= questionnaire_option.option %></td>
+                          <td></td>
                           <td><%= questionnaire_option.isRight %></td>
                         </tr>
                       <% end %>
+                      </tbody>
+                    </table>
                   <% end %>
                 </tbody>
               </table>
