--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for(@company) do |f| %>
   <% if @company.errors.any? %>
     <div id="error_explanation">
@@ -11,7 +13,35 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+            <form class="form contact-form" id="contact_form">
+              <div class="clearfix">
+                <div class="row"> 
+                  <div class="col-sm-4 col-sm-offset-4 mb-40">
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_field :name, :class => "input-md round form-control", :placeholder => "Name", :type => "text", :pattern => ".{1,100}", :required => ""  %>
+                    </div>
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_field :phone, :class => "input-md round form-control", :placeholder => "Phone", :type => "tel", :pattern => ".{1,100}", :required => ""  %>
+                    </div>
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_area :address, :class => "input-md round form-control", :placeholder => "Address", :type => "text", :pattern => ".{1,300}", :required => "", :style => "resize: none; height: 122px;"  %>
+                    </div>
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_field :pan, :class => "input-md round form-control", :placeholder => "PAN Number", :type => "text", :pattern => ".{6,10}", :required => ""  %>
+                    </div>
+
+                    <div class="align-right pt-10">
+                      <%= submit_tag "SUBMIT", :class => "submit_btn btn btn-mod btn-medium btn-round", :id => "login-btn" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                
+              <div class="clearfix">
+                <!-- Send Button -->
+                
+              </div>
+            </form>   
+            <!-- End Login Form -->
+          
 <% end %>
