--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,24 @@
-<h1>Editing Company</h1>
+<div class="page" id="top">   
+    <!-- Home Section -->
+    <section class="home-section bg-dark-alfa-50 " data-background=<%= asset_url("full-width-images/landing.jpg")%> style='background-image:url(<%= asset_url("full-width-images/landing.jpg")%>)' id="home">
+       <div class="relative container align-left">
+	      <div class="row">
+	          <div style="margin:90px 0 60px 0;">
+	              <h1 class="hs-line-11 font-alt mb-20 mb-xs-0"><%= @company.name %></h1>
+	              <div class="hs-line-4 font-alt"><%= @company.email %></div>
+	          </div>
+	      </div>
+	  </div>
+    </section>
+    <!-- End Home Section -->
 
-<%= render 'form' %>
+    <!-- Section -->
+    <section class="small-section" id="multi-page">
+    	<%= render 'form' %>
+    </section>
+    <!-- End Section -->
+</div>
 
-<%= link_to 'Show', @company %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to 'Edit', edit_company_path(@company) %>
+
+
