--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -29,6 +29,14 @@
                     <div class="field" style="margin-bottom: 10px;">
                       <%= f.text_field :pan, :class => "input-md round form-control", :placeholder => "PAN Number", :type => "text", :pattern => ".{6,10}", :required => ""  %>
                     </div>
+                    <hr>
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_field :password, :class => "input-md round form-control", :placeholder => "Password", :type => "password"  %>
+                    </div>
+                    <div class="field" style="margin-bottom: 10px;">
+                      <%= f.text_field :password_confirmation, :class => "input-md round form-control", :placeholder => "Confirm Password", :type => "password" %>
+                    </div>
+
 
                     <div class="align-right pt-10">
                       <%= submit_tag "SUBMIT", :class => "submit_btn btn btn-mod btn-medium btn-round", :id => "login-btn" %>
